More Result Info|Cleanup Code

--- a/src/main/resources/gr/uop/asteras/data/vassilakis.bib
+++ b/src/main/resources/gr/uop/asteras/data/vassilakis.bib
@@ -2,7 +2,7 @@
   author    = {Dionisis Margaris and
                Costas Vassilakis and
                Dimitris Spiliotopoulos},
-  title     = {On Producing Accurate Rating Predictions in Sparse Collaborative Filtering
+  title     = {Take On Producing Accurate Rating Predictions in Sparse Collaborative Filtering
                Datasets},
   journal   = {Inf.},
   volume    = {13},
@@ -3389,4 +3389,3 @@
   biburl    = {https://dblp.org/rec/conf/parle/SpiliopoulouHV92.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-
